# googlescrape

./: Cargo.toml  README.md  cbindgen.toml  out.html
examples/: main.rs
src/: ffi.rs  lib.rs
