[package]
name = "googlescrape"
version = "0.1.0"
authors = ["bepvte <bepvte@gmail.com>"]
edition = "2018"
description = "a library to scrape google results"
license = "AGPL-3.0"
keywords = ["google","search"]
repository = "https://github.com/redg3ar/googlescrape"

[dependencies]
runtime = "0.3.0-alpha.4"
lazy_static = "1.3.0"
curl = "0.4.22"
curl-sys = "0.4.18"
percent-encoding = "1.0.1"
scraper = "0.10.0"
