[package]
name = "googlescrape"
version = "0.2.0"
authors = ["bepvte <bepvte@gmail.com>"]
edition = "2018"
description = "a library to scrape google results"
license = "AGPL-3.0"
keywords = ["google","search"]
repository = "https://github.com/redg3ar/googlescrape"

[dependencies]
runtime = "0.3.0-alpha.4"
lazy_static = "1.3.0"
percent-encoding = "1.0.1"
scraper = "0.10.0"
libc = "0.2.55"
curl = "0.4.22"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[features]
ffi = []
static-curl = ["curl/static-curl"]